--- a/app/src/main/res/values-ru/Values-ru.xml
+++ b/app/src/main/res/values-ru/Values-ru.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">НМедиа</string>
-    <string name="hello_nmedia" translatable="false">Здравствуй, НМедиа!</string>
+    <string name="hello_nmedia">Здравствуй, НМедиа!</string>
 </resources>
