--- a/app/src/main/res/values-ru/strings-ru.xml
+++ b/app/src/main/res/values-ru/strings-ru.xml
@@ -21,4 +21,9 @@
     <string name="addPostText">Добавление поста</string>
     <string name="editPostText">Редактирование текста:</string>
     <string name="imageEdit">Картинка редактирования</string>
+    <string name="button_ok">Добавить пост</string>
+    <string name="button_cancel">Кнопка отмены</string>
+    <string name="video">Видео</string>
+    <string name="enable_video">Включить видео</string>
+    <string name="video_url">Ссылка на видео</string>
 </resources>
